log
Tue 11 Apr 2023 11:50:29 PM UTC: 
 tests:  0|6
total_score: 0/70
5b3b188
Tue 11 Apr 2023 11:51:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
42dd9ef
Tue 11 Apr 2023 11:59:44 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1f66738
Tue 11 Apr 2023 11:59:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
334dee6
Wed 12 Apr 2023 12:01:17 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
e91cdd8
Wed 12 Apr 2023 12:02:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cbaa77a
Thu 13 Apr 2023 01:29:02 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
3296f99
Fri 14 Apr 2023 10:39:07 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:51: error: argument 1 null where non-null expected [-Werror=nonnull]
   45 |     while (map->buckets[posicion]->key != NULL || strcmp(map->buckets[posicion]->key, key) != 0) {
      |                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from test.c:3:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:156:12: note: in a call to function ‘strcmp’ declared ‘nonnull’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d7fa8fc
Fri 14 Apr 2023 10:40:23 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
In function ‘insertMap’,
    inlined from ‘insertMap’ at hashmap.c:42:6:
hashmap.c:49:51: error: argument 1 null where non-null expected [-Werror=nonnull]
   49 |     while (map->buckets[posicion]->key != NULL || strcmp(map->buckets[posicion]->key, key) != 0) {
      |                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from test.c:3:
hashmap.c: In function ‘insertMap’:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:156:12: note: in a call to function ‘strcmp’ declared ‘nonnull’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8acd3c3
